--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
     <link rel="stylesheet" href="css/mystyles.css">
-    <title>buefy_test</title>
+    <title>MongoDB sample eCommerce site</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but buefy_test doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but this web app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
