--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
     <link rel="stylesheet" href="css/mystyles.css">
+    <script src="https://js.stripe.com/v3/"></script>
     <title>MongoDB sample eCommerce site</title>
   </head>
   <body>
